src/CSS/Navbar.css
body{
    color: azure;
}

a{
    color: azure;
    text-decoration: none;
}

/* Navbar.css */
/* Navbar.css */

.container{
  padding-left: 60px;
}
/* Styles for the motion container */
.motion-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 0 4rem; /* Adjust padding as needed */
  margin-top: 6rem; /* Adjust margin-top as needed */
}

/* Styles for the motion div */
.motion-div {
  max-width: 600px;
}

/* Styles for the introductory paragraph */
.motion-div p {
  height: auto;
  max-width: 450px;
  font-size: 3rem; /* Adjust font size as needed */
  color: #666; /* Adjust text color as needed */
  margin-bottom: 1.5rem; /* Adjust margin bottom as needed */
}

/* Styles for the primary button */
.motion-div .button-primary {
  background-color: #00ffef;
  color: white;
  padding: 10px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1rem;
  border-radius: 5px;
  transition-duration: 0.4s;
  cursor: pointer;
}

.motion-div .button-primary:hover {
  background-color: #00ffef; 
}

.button a{
  padding: 15px 20px !important;
}

.motion-div .button {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 200px;
  height: 60px;
  /* padding: 15px 30px; */
  font-family: inherit;
  background-color: var(--color-primary);
  border: 2px solid;
  font-size: 20px;
  font-weight: 600;
  color: white;
  cursor: pointer;
  text-transform: uppercase;
  overflow: hidden;
  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
  max-width: 250px;
}

.motion-div .button:hover span {
  background: linear-gradient(135deg, #57ebde 0%, #2acefb 100% );
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.motion-div .button::before {
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  left: -110%;
  top: -0%;
  background: #00ffef;
  pointer-events: none;
  margin: auto;
  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
}

.motion-div .button:hover {
  letter-spacing: 2px;
  border-image: linear-gradient(135deg, #57ebde 0%, #2acefb 100% );
  border-image-slice: 1;
}

.motion-div .button:hover::before {
  left: 110%;
}

.motion-div .button:active {
  scale: 0.95;
}



/* Define variables */
:root {
  --borderRadius: 10px;
  --spacer: 1rem;
  --primary: #00ffef;
  --text: #6a778e;
  --linkHeight: calc(var(--spacer) * 3.5);
  --timing: 250ms;
}

/* Gooey effect keyframes */
@keyframes gooeyEffect {
  0% {
    transform: scale(1, 1);
  }
  50% {
    transform: scale(0.5, 1.5);
  }
  100% {
    transform: scale(1, 1);
  }
}

/* Global styles */
body {
  background: #eaeef6;
  font-family: 'Open Sans', sans-serif;
}

/* Navbar styles */
/* Base styles for the navbar */
.navbar {
  z-index: 9999;
  position: fixed;
  top: var(--spacer);
  left: var(--spacer);
  background: #fff;
  border-radius: var(--borderRadius);
  padding: var(--spacer) 0;
  box-shadow: 0 0 40px rgba(0, 0, 0, 0.03);
  height: calc(100vh - var(--spacer) * 4);
  display: flex;
  flex-direction: column;
}

.navbar__link {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  height: var(--linkHeight);
  width: calc(var(--spacer) * 5.5);
  color: var(--text);
  transition: var(--timing) ease all;
}

.navbar__link span {
  position: absolute;
  left: 100%;
  transform: translate(calc(-1 * var(--spacer) * 3));
  margin-left: 1rem;
  opacity: 0;
  pointer-events: none;
  color: var(--primary);
  background: #fff;
  padding: calc(var(--spacer) * 0.75);
  transition: var(--timing) ease all;
  border-radius: calc(var(--borderRadius) * 1.75);
}

.navbar__link:hover {
  color: #00ffef;
}

.navbar:not(:hover) .navbar__link:focus,
.navbar__link:hover span {
  opacity: 1;
  transform: translate(0);
}

.navbar__item:last-child:before {
  content: '';
  position: absolute;
  opacity: 0;
  z-index: -1;
  top: 0;
  left: var(--spacer);
  width: var(--linkHeight);
  height: var(--linkHeight);
  background: var(--primary);
  border-radius: calc(var(--borderRadius) * 1.75);
  transition: var(--timing) cubic-bezier(1, 0.2, 0.1, 1.2) all;
}

/* Media query for mobile devices */
@media (max-width: 768px) {
  .navbar {
    position: fixed;
    top: auto;
    bottom: 0;
    left: 0;
    width: 100%;
    height: var(--linkHeight);
    border-radius: 0;
    padding: 0;
    flex-direction: row;
    justify-content: space-around;
  }

  .navbar__link {
    height: 100%;
    width: auto;
    flex: 1;
  }

  .navbar__link span {
    position: static;
    transform: none;
    margin: 0;
    opacity: 1;
    pointer-events: auto;
    background: none;
    padding: 0;
  }

  .navbar__item:last-child:before {
    display: none;
  }
}


/* .navbar__item:hover:before {
  opacity: 1;
  animation: gooeyEffect var(--timing) 1;
} */





/* Horizontal navbar styles for mobile */
.horizontal-navbar {
  z-index: 9999;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background: #fff;
  border-radius: var(--borderRadius) var(--borderRadius) 0 0;
  box-shadow: 0 0 40px rgba(0, 0, 0, 0.03);
  display: flex;
  justify-content: space-around;
  padding: var(--spacer) 0;
}

.horizontal-navbar__menu {
  display: flex;
  width: 100%;
  list-style: none;
  margin: 0;
  padding: 0;
}

.horizontal-navbar__item {
  flex-grow: 1;
  text-align: center;
}

.horizontal-navbar__link {
  position: relative;
  display: block;
  padding: 10px 0;
  color: var(--text);
  text-decoration: none;
  transition: var(--timing) ease all;
}

.horizontal-navbar__link span {
  position: absolute;
  top: -150%;
  left: 50%;
  transform: translateX(-50%);
  margin-left: 0;
  opacity: 0;
  pointer-events: none;
  color: var(--primary);
  background: #fff;
  padding: calc(var(--spacer) * 0.75);
  transition: var(--timing) ease all;
  border-radius: calc(var(--borderRadius) * 1.75);
}

.horizontal-navbar__link:hover {
  color: #00ffef;
}

.horizontal-navbar__link:hover span {
  opacity: 1;
  transform: translateX(-50%) translateY(-10px);
}

.horizontal-navbar__item:last-child:before {
  content: '';
  position: absolute;
  opacity: 0;
  z-index: -1;
  top: 0;
  left: 50%;
  width: var(--linkHeight);
  height: var(--linkHeight);
  background: var(--primary);
  border-radius: calc(var(--borderRadius) * 1.75);
  transition: var(--timing) cubic-bezier(1, 0.2, 0.1, 1.2) all;
}

/* Media query for desktop/tablet */
@media (min-width: 769px) {
  .horizontal-navbar {
    display: none; /* Hide the horizontal navbar on larger screens */
  }
}


.container{
  padding-right: 20px;
}




  
  .typewriter {
    color: #00ffef;
    overflow: hidden; /* Ensures the content is not revealed until the animation */
    border-right: .15em solid #00ffef; /* The typewriter cursor */
    white-space: nowrap; /* Keeps the content on a single line */
    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
    letter-spacing: .15em; /* Adjust as needed */
    animation: 
      /* typing 3.5s steps(30, end), */
      blink-caret .75s step-end infinite;
  }
  
  /* The typing effect */
  /* @keyframes typing {
    from { width: 0 }
    to { width: 100% }
  } */
  
  /* The typewriter cursor effect */
  @keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: #00ffef; }
  }


  @media (max-width: 1124px) {
    .motion-div {
      align-items: center !important;
      flex-direction: column !important;
      display: flex !important;
  }

    .container {
      display: grid !important;
      grid-template-columns: 1fr;
      justify-content: center;
      text-align: center;
      align-items: center;
      gap: 20px;
      padding: 10px;
      margin-top: -150px !important;
    }

    .motion-div p{
      max-width: 100% !important;
    }

    .motion-container{
      padding: 0 0 0 110px;
    }

    .for_center{
      flex-direction: row !important;
      padding-left: 110px !important;
    }
    
    .about-me{
      text-align: left !important;
    }

    .newButtonClass{
      position: absolute !important;
      right: 103px !important;
      bottom: -50px !important;
    }

    .motion-div img {
      width: 100%;
      max-width: 450px;
      height: 450px;
    }

  }
  




  @media (max-width: 768px) {
    .for_center{
      padding-left: 0px !important;
    }
    .newButtonClass{
      position: relative !important;
      right: 0 !important;
      bottom: 10px !important;
    }
    .container {
      display: grid !important;
      grid-template-columns: 1fr;
      justify-content: center;
      text-align: center;
      align-items: center;
      gap: 20px;
      padding: 10px;
      margin-top: -100px !important;
    }
  
    .motion-container {
      display: grid;
      /* grid-template-columns: 1fr; */
      gap: 20px;
      padding: 0 1.8rem;
    }
  
    .motion-div {
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;
    }
  
    .motion-div img {
      width: 100%;
      max-width: 300px;
      height: 300px;
    }

    .for_center{
      flex-direction: column !important;
    }

    .about-me{
      text-align: center !important;
    }
  
    .motion-div p,
    .motion-div button {
      width: 100%;
      margin-top: -50px;
    }

    .motion-div p{
      position: relative;
      text-align: center;
      font-size: 24px;
      height: 100px !important;
    }
  }
  
  @media (max-width: 445px) {
    .motion-div p{
      font-size: 20px !important;
    }
  }

